After CMF 1.5.4

  Bug Fixes

    - CMFCore.MemberDataTool: Fixed the pruneMemberData functionality in the
      ZMI: Now it is enough to press the button once.

    - Collector #381:  CMFCore unit tests depended on CMFDefault / workflow.

    - CalendarTool: If an event ends at exactly midnight, don't show it
      in the list of events for the day starting at midnight.
      (http://www.zope.org/Collectors/CMF/246)

  Features

    - CMFSetup:  added support for configuring cookie authentication and
      mailhost tools (http://www.zope.org/Collectors/CMF/387).

    - CMFCore.CachingPolicyManager: Caching policies can now control all the 
      Cache-Control tokens defined in the HTTP 1.1 spec (s-maxage, public, 
      private, no-transform).  When no-cache is enabled, a Pragma: no-cache 
      header is also sent for HTTP 1.0 clients. Thanks go to Geoff Davis
      for contributing the necessary patches.

    - CMFCore.FSPageTemplate:  These now have the option to return a status 
      304 and no content when a conditional GET is sent.  This is a potential 
      significant win for sites. This behavior is activated on the
      CachingPolicyManager by using policies that set suitable ETag headers
      when delivering the content. Geoff Davis invested the time to add
      this feature.

  Others

    - Collectors #384:  Added '__traceback_info__' to FSDTMLMethod's
      call-stack etnry.

    - Collector #383:  Added tab to 'portal_uidhandler' tool to allow
      querying objects given UID.

    - CMFCatalogAware: refactoring. Defines now 2 methods,
      _getCatalogTool() and _getWorkflowTool(), that are used to find
      the catalog and workflow tool. It's now possible to override
      these methods using inheritence for a given content type to
      specify another catalog or workflow tool the content type can
      use

    - CMFSetup: allow export of properties of old objects that were
      stored as lists (instead of tuples now).
